src/test/ui/type-alias-bounds.stderr
warning: bounds on generic parameters are not enforced in type aliases
  --> $DIR/type-alias-bounds.rs:17:14
   |
LL | type SVec<T: Send+Send> = Vec<T>;
   |              ^^^^ ^^^^
   |
   = note: #[warn(type_alias_bounds)] on by default

warning: where clauses are not enforced in type aliases
  --> $DIR/type-alias-bounds.rs:19:21
   |
LL | type S2Vec<T> where T: Send = Vec<T>;
   |                     ^^^^^^^

warning: bounds on generic parameters are not enforced in type aliases
  --> $DIR/type-alias-bounds.rs:21:19
   |
LL | type VVec<'b, 'a: 'b+'b> = (&'b u32, Vec<&'a i32>);
   |                   ^^ ^^

warning: bounds on generic parameters are not enforced in type aliases
  --> $DIR/type-alias-bounds.rs:23:18
   |
LL | type WVec<'b, T: 'b+'b> = (&'b u32, Vec<T>);
   |                  ^^ ^^

warning: where clauses are not enforced in type aliases
  --> $DIR/type-alias-bounds.rs:25:25
   |
LL | type W2Vec<'b, T> where T: 'b, T: 'b = (&'b u32, Vec<T>);
   |                         ^^^^^  ^^^^^

warning: bounds on generic parameters are not enforced in type aliases
  --> $DIR/type-alias-bounds.rs:56:12
   |
LL | type T1<U: Bound> = U::Assoc;
   |            ^^^^^

warning: where clauses are not enforced in type aliases
  --> $DIR/type-alias-bounds.rs:58:18
   |
LL | type T2<U> where U: Bound = U::Assoc;
   |                  ^^^^^^^^

error[E0220]: associated type `Assoc` not found for `U`
  --> $DIR/type-alias-bounds.rs:60:14
   |
LL | type T3<U> = U::Assoc;
   |              ^^^^^^^^ associated type `Assoc` not found

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0220"
